	(twittering-switch-edit-skeleton): new function.
	(twittering-edit-skeleton-change-footer): new function.
	(twittering-edit-skeleton-insert-base): new function.
	(twittering-edit-skeleton-insert): new function.
	(twittering-update-status-from-pop-up-buffer): insert the current
	edit skeleton before editing a tweet.
	(twittering-update-status-from-minibuffer): likewise.

2011-03-27  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Discard standard error of the program
	"convert". On an environment where the option "-flatten" cause a
	warning for a non-animated image, Emacs must exclude such
	warnings.
	(twittering-convert-image-data): discard standard error of the
	program "convert".

	* twittering-mode.el: Entrust image type estimation to the command
	"convert".
	(twittering-create-image-pair): do not send image type estimated by
	Emacs to the function `twittering-convert-image-data'.

2011-03-26  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: `twittering-other-user-list-interactive'
	works well when the specified user follows no list.
	(twittering-other-user-list-interactive): fix an error occurring
	when the specified user follows no list or selection is
	cancelled.

	* twittering-mode.el: `twittering-other-user-list-interactive'
	displays a subscription as a string like timeline spec string.
	(twittering-http-get-list-subscriptions-sentinel): exclude
	preceding "@" from a string corresponding to a subscription.
	(twittering-other-user-list-interactive): follow the above
	modification.

	* twittering-mode.el: Modify the prompts for subscription.
	(twittering-read-subscription-list-name): modify the prompt for
	subscription.
	(twittering-other-user-list-interactive): likewise.

	* twittering-mode.el: Add an advice for avoiding an error occuring
	when `getenv' returns an empty string on Emacs21. The bug had been
	fixed on Emacs22 and later.

	* test/test-twittering-mode.el: Fix a test of formating a status